--- a/blanca.html
+++ b/blanca.html
@@ -10,7 +10,7 @@
         <h1> Git y Github</center>
     </h1>
     <h2>
-        <left>Objetivo del sitio</h2>
+        <left>OBJETIVO DEL SITIO</h2>
     </left>
 
     <p>Explicar de forma clara y precisa la creacion, uso y seguimiento de repositorios manipulados por medio de un sistema controlador de versiones CSV Git Y conservacion de repositorios en un CSV Github con el fin de trabajar en proyectos de forma colaborativa
