--- a/blanca.html
+++ b/blanca.html
@@ -23,7 +23,7 @@
     <hr/>
 
 
-    <h2> Materiales Referencia </h2>
+    <h2> MATERIAL BIBLIOGRAFICO </h2>
     <p>https://git-scm.com/book/en/v2/Getting-Started-First-Time-Git-Setup</p>
     <p>https://www.youtube.com/watch?v=HiXLkL42tMU</p>
     <p>http://hdl.handle.net/10596/22592</p>
